--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -37,6 +37,6 @@ jobs:
           GH_USERNAME: ${{ secrets.GH_USERNAME }}
 
       - name: Commit and Push new README.md to the repository
-        uses: mikeal/publish-to-github-action@main
+        uses: mikeal/publish-to-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
